--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="output.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Young+Serif&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,30 +19,79 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
 
-  Supervisor
-  Monitors activity to identify project roadblocks
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+  <!-- header -->
+   <header>
+    <div class="container">
+      <h1>Reliable, efficient delivery</h1>
+      <h2>Powered by Technology</h2>
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful
+      </p>
+    </div>
+   </header>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+   <!-- Cards section -->
+    <main>
+      <div class="container">
+        <div class="features">
 
-  
+          <!-- first card -->
+          <div class="card supervisor">
+            <h3>Supervisor</h3>
+            <p>
+              Monitors activity to identify project roadblocks
+            </p>
+            <picture class="card-image">
+              <img src="./images/icon-supervisor.svg" alt="zoom tool">
+            </picture>
+          </div>
+
+          <!-- second card -->
+          <div class="card team">
+            <h3>Team Builder</h3>
+            <p>
+              Scans our talent network to create the optimal team for your project
+            </p>
+            <picture class="card-image">
+              <img src="./images/icon-team-builder.svg" alt="icon-team-builder">
+            </picture>
+          </div>
+
+          <!-- Third card -->
+          <div class="card karma">
+            <h3>Karma</h3>
+            <p>
+              Regularly evaluates our talent to ensure quality
+            </p>
+            <picture class="card-image">
+              <img src="./images/icon-karma.svg" alt="icon-karma">
+            </picture>
+          </div>
+
+          <!-- Fourth card -->
+          <div class="card calculator">
+            <h3>Calculator</h3>
+            <p>
+              Uses data from past projects to provide better delivery estimates
+            </p>
+            <picture class="card-image">
+              <img src="./images/icon-calculator.svg" alt="icon-calculator">
+            </picture>
+          </div>
+        </div>
+      </div>
+    </main>
+
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Nitiema Allassane</a>.
     </p>
   </footer>
 </body>
